--- a/index.html
+++ b/index.html
@@ -3,10 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bike Repair Shop</title>
+    <title>Roar Cycle - Bike Repairs in Dublin</title>
+
+    <!-- This is the CSS Reset -->
+    <link rel="stylesheet" href="css-reset.css">
+    <!-- This is my stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <header>
+            <div class="logo">
+                <img src="images/logo-roar-bikes.png" alt="Roar Cycle Lion Logo">
+            </div>
+
+            <nav>
+                Book Online About Contact 
+            </nav>
+
+        </header>
     
+        <main>
+            <div class="herobox1dolor sit">
+                <h1>Mobile bike repairs.</h1>
+                <p>Many people have difficulty getting their bikes to a bike shop. We call to your office or home anywhere in greater Dublin.</p>
+                <p>Fast, convenient bike servicing with up-front pricing. All without the hassle of taking your bike into a shop.</p>
+            </div>
+            <div class="herobox2">
+                <img src="images/image-bike-repair-service.jpg" alt="Person Servicing a bike in dublin">
+            </div>
+        </main>
+
+        <div class="cards"> 
+            <div class="card1">
+            </div>
+            <div class="card2"></div>
+            <div class="card3"></div>
+        </div>
+
+    </div>
 </body>
 </html>
