Added and Removed Google Fonts

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="css-reset.css">
     <!-- This is my stylesheet -->
     <link rel="stylesheet" href="style.css">
+
+    <!--Google Fonts-->
+
+    <!--Google Fonts-->
+
 </head>
 <body>
     <div class="container">
