--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="style.css">
 
     <!--Google Fonts-->
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Sans+3&display=swap" rel="stylesheet">
     <!--Google Fonts-->
 
 </head>
@@ -41,9 +43,17 @@
 
         <div class="cards"> 
             <div class="card1">
+                <h2>Book Online</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam unde sequi nostrum adipisci iure velit.</p>
             </div>
-            <div class="card2"></div>
-            <div class="card3"></div>
+            <div class="card2">
+                <h2>Service Types</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam unde sequi nostrum adipisci iure velit.</p>
+            </div>
+            <div class="card3">
+                <h2>Call for Advice</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam unde sequi nostrum adipisci iure velit.</p>
+            </div>
         </div>
 
     </div>
