--- a/index.html
+++ b/index.html
@@ -43,16 +43,22 @@
 
         <div class="cards"> 
             <div class="card1">
-                <h2>Book Online</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam unde sequi nostrum adipisci iure velit.</p>
+                <a href="#">
+                    <h2>Book Online</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam unde sequi nostrum adipisci iure velit.</p>
+                </a>
             </div>
             <div class="card2">
-                <h2>Service Types</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam unde sequi nostrum adipisci iure velit.</p>
+                <a href="#">
+                    <h2>Service Types</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam unde sequi nostrum adipisci iure velit.</p>
+                </a>
             </div>
             <div class="card3">
-                <h2>Call for Advice</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam unde sequi nostrum adipisci iure velit.</p>
+                <a href="#">
+                    <h2>Call for Advice</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam unde sequi nostrum adipisci iure velit.</p>
+                </a>
             </div>
         </div>
 
