--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roar Cycle - Bike Repairs in Dublin</title>
+    <title>Roar Cycle - Contact Us Details Address Phone Number</title>
+    <meta name="description" content="Contact details for Roar - 57 Moyglare Abbey, Dublin, w23c1k2. Phone +353 5465481">
 
     <!-- This is the CSS Reset -->
     <link rel="stylesheet" href="css-reset.css">
@@ -21,7 +22,9 @@
     <div class="container">
         <header>
             <div class="logo">
-                <a href="index.html"><img src="images/logo-roar-bikes.png" alt="Roar Cycle Lion Logo"></a>
+                <a href="index.html">
+                    <img src="images/logo-roar-bikes.png" alt="Roar Cycle Lion Logo">
+                </a>
             </div>
 
             <nav>
@@ -54,17 +57,10 @@
 
         </header>
     
-        <main>
-            <div class="herobox1">
-                <h1>Mobile bike repairs.</h1>
-                <p>Many people have difficulty getting their bikes to a bike shop. We call to your office or home anywhere in greater Dublin.</p>
-                <p>Fast, convenient bike servicing with up-front pricing. All without the hassle of taking your bike into a shop.</p>
-                <a href="test-page.html" class="mybutton">Book Online</a>
-            </div>
-            <div class="herobox2">
-                <img src="images/image-bike-repair-service.jpg" alt="Person Servicing a bike in dublin">
-            </div>
-        </main>
+        <div class="main2">
+            <h1>Contact Us</h1>
+            <p>Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within a matter of hours to help you.</p>
+        </div>
 
         <div class="cards"> 
             <div class="card1">
